# boundari

./: .gitignore  README.md  pyproject.toml
examples/pydantic_ai_support_agent/: README.md
examples/raw_python_email_agent/: README.md  demo.py
src/boundari/: __init__.py  approval.py  audit.py  boundary.py  budget.py  cli.py  exceptions.py  policy.py  redact.py  testing.py  yaml.py
src/boundari/adapters/: __init__.py  openai_agents.py  pydantic_ai.py
tests/: test_async.py  test_budget.py  test_cli.py  test_e2e_cli.py  test_policy.py  test_redact_audit.py  test_testing.py  test_yaml.py
